--- a/src/styles.css
+++ b/src/styles.css
@@ -1,24 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
-h1 {
-    color: #369;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 250%;
+* {
+    font-family: Roboto, "Helvetica Neue", sans-serif;
 }
-h2, h3 {
-    color: #444;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: lighter;
+div {
+    margin: 1% 2.5% 1% 2.5%;
 }
 body {
-    margin: 2em;
+    margin: 0; 
 }
-body, input[type="text"], button {
-    color: #333;
-    font-family: Cambria, Georgia, serif;
-}
-/* everywhere else */
-* {
-    font-family: Arial, Helvetica, sans-serif;
-}
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
