--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,11 +12,17 @@
   </button>
 </mat-toolbar>
 
-<div>
+<div id="main">
 
-  <h1>{{title}}</h1>
+  <mat-card>
+    <mat-card-title-group>
+      <mat-card-title>{{title}}</mat-card-title>
+      <mat-card-subtitle>{{subtitle}}</mat-card-subtitle>
+    </mat-card-title-group>
+    
+  </mat-card>
 
-  <button (click)="firebase_test()">Teste Firebase</button>
+  <!-- <button (click)="firebase_test()">Teste Firebase</button> -->
 
 </div>
 
