--- a/src/styles.css
+++ b/src/styles.css
@@ -2,9 +2,11 @@
 * {
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
-div {
-    margin: 1% 2.5% 1% 2.5%;
-}
+
 body {
     margin: 0; 
+}
+
+#main {
+    margin: 1% 2.5% 1% 2.5%;
 }
