lista inicial feita

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,8 @@
 
   <!-- <button (click)="firebase_test()">Teste Firebase</button> -->
 
+  <app-cardapio></app-cardapio>
+
 </div>
 
 <router-outlet></router-outlet>
