--- a/src/app/item-cardapio/item-cardapio.component.css
+++ b/src/app/item-cardapio/item-cardapio.component.css
@@ -1,3 +1,9 @@
 mat-expansion-panel {
     width: 100%;
+    margin-bottom: 1%;
+}
+mat-expansion-panel-header img {
+    /* FIXME cause it seems odd */
+    width: 25%;
+    height: auto;
 }
