adicionado categoria na interface de ItemCardapio

--- a/src/app/cardapio/cardapio.component.html
+++ b/src/app/cardapio/cardapio.component.html
@@ -1,5 +1,6 @@
 <div id="lista-cardapio">
     <!-- TODO style this! -->
+    <!-- TODO category grouping -->
     <mat-accordion multi>
         <div *ngFor="let mock of mock_stuff">
             <app-item-cardapio [item]="mock" ></app-item-cardapio>
