FIx rápido na instabilidade do sistema

--- a/src/app/cardapio-botoes/novo-item-dialog.html
+++ b/src/app/cardapio-botoes/novo-item-dialog.html
@@ -41,6 +41,6 @@
 </mat-dialog-content>
 
 <mat-dialog-actions>
-    <button mat-raised-button (click)="request_item_insertion() //TODO send form">Criar Item</button>
+    <button mat-raised-button (click)="true //TODO send form">Criar Item</button>
     <button mat-raised-button mat-dialog-close>Fechar</button>
 </mat-dialog-actions>
