mantendo reatividade da lista

--- a/src/app/cardapio-botoes/novo-item-dialog.html
+++ b/src/app/cardapio-botoes/novo-item-dialog.html
@@ -43,6 +43,6 @@
 </mat-dialog-content>
 
 <mat-dialog-actions>
-    <button type="submit" mat-raised-button (click)="item_creation_service(novoItemForm.form.value); closeDialog()">Criar Item</button>
+    <button type="submit" mat-raised-button (click)="itemCreationService(novoItemForm.form.value); closeDialog()">Criar Item</button>
     <button mat-raised-button mat-dialog-close>Fechar</button>
 </mat-dialog-actions>
