Limpando código antigo

--- a/src/app/item-cardapio/item-cardapio.component.html
+++ b/src/app/item-cardapio/item-cardapio.component.html
@@ -8,6 +8,7 @@
         <mat-panel-description>
             {{item.preco}}
         </mat-panel-description>
+        <mat-checkbox [checked]="item.checked" ></mat-checkbox>
     </mat-expansion-panel-header>
     <p>{{item.descricao}}</p>
 </mat-expansion-panel>
