feature#25 - foto opcional FEITA! parte já havia sido feita anteriormente, na validação do form

--- a/src/app/item-cardapio/item-cardapio.component.html
+++ b/src/app/item-cardapio/item-cardapio.component.html
@@ -1,7 +1,7 @@
 <!-- TODO accordion? check in expansion-panel page -->
 <mat-expansion-panel hideToggle>
     <mat-expansion-panel-header>
-        <img matListAvatar src="..."/>
+        <img *ngIf="item.foto != ''" matListAvatar src="item.foto"/>
         <mat-panel-title style="flex-grow: 0;">
             {{item.nome}}
         </mat-panel-title>
