--- a/src/app/cardapio-botoes/cardapio-botoes.component.html
+++ b/src/app/cardapio-botoes/cardapio-botoes.component.html
@@ -1,5 +1,6 @@
 <div id="cardapio-botoes">
     <!-- TODO pop-up -->
+    <button mat-raised-button color="primary" (click)="nova_categoria()">Nova Categoria</button>
     <button mat-raised-button color="primary" (click)="novo_item()">Novo Item</button>
     <button mat-raised-button color="primary" (click)="excluir_item()">Excluir Item</button>
 </div>
