feature#19 - categoria como selecionável FEITA

--- a/src/app/cardapio-botoes/nova-categoria-dialog.html
+++ b/src/app/cardapio-botoes/nova-categoria-dialog.html
@@ -11,4 +11,6 @@
 <div mat-dialog-actions>
     <button mat-raised-button (click)="sendCategoria()">Excluir Item</button>
     <button mat-raised-button mat-dialog-close>Fechar</button>
+    <mat-error *ngIf="invalidForm"> A categoria já existe! </mat-error>
+
 </div>
