--- a/src/app/cardapio/cardapio.component.html
+++ b/src/app/cardapio/cardapio.component.html
@@ -4,16 +4,18 @@
     <mat-accordion multi *ngIf="items != []">
 
         <div *ngFor="let categoria of itensCategoria">
-            <p [ngStyle]="{'margin': '2% 0% 0% 3%'}"> {{categoria.categoria}} </p>
-            <mat-divider></mat-divider>
+            <div *ngIf="categoria.itens.length != 0">
+                <p [ngStyle]="{'margin': '2% 0% 0% 3%'}"> {{categoria.categoria}} </p>
+                <mat-divider></mat-divider>
 
-            <app-item-cardapio *ngFor="let item of categoria.itens" [item]="item" ></app-item-cardapio>
+                <app-item-cardapio *ngFor="let item of categoria.itens" [item]="item" ></app-item-cardapio>
+            </div>
         </div>
 
         
     </mat-accordion>
     <div *ngIf="items.length == 0" [ngStyle]="{'flex': 1, 'justify-content': 'align-center', 'flex-direction': 'row'}">
         <p>Não há itens a serem exibidos!</p>
-        <p>Tente inserir algum :)</p>
+        <p>Tente inserir alguma categoria primeiro :)</p>
     </div>
 </div>
